DigicielFull/force-app/main/default/objects/Synoptic__SynopticView_Field__c/Synoptic__SynopticView_Field__c.object-meta.xml
<CustomObject>
    <label>Synoptic View Field</label>
    <nameField>
        <displayFormat>SV{0000000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Synoptic View Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>