DigicielFull/force-app/main/default/objects/Synoptic__SynopticView_Field__c/fields/Synoptic__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Synoptic__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>