DigicielFull/force-app/main/default/objects/Synoptic__SynopticView_Field__c/fields/Synoptic__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Synoptic__Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>