DigicielFull/force-app/main/default/objects/Synoptic__SynopticView_Field__c/fields/Synoptic__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Synoptic__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>